LTN：10.18 LTN1 测试，调整盒子归属

--- a/_posts/css相关内容/2019-07-14-文本不换行+显示省略号.md
+++ b/_posts/css相关内容/2019-07-14-文本不换行+显示省略号.md
@@ -20,9 +20,9 @@ typora-root-url: ..
 
 ```css
 single-line {
-    white-space: nowrap; /* white-space 指定两件事：空白字符是否合并+是否换行，以及如何合并/换行 */
-	text-overflow: ellipsis; /* 只对块级元素溢出有效，默认 clip（可能单词中间截断） */
-	overflow: hidden;
+    white-space: nowrap; /* 『white-space』 指定两件事：空白字符是否合并+是否换行，以及如何合并/换行 */
+    text-overflow: ellipsis; /* 只对块级元素溢出有效，默认 clip（可能单词中间截断） */
+    overflow: hidden;
 }
 ```
 
