--- a/_posts/css相关内容/2019-10-25-三栏，两边固定，中间自适应.md
+++ b/_posts/css相关内容/2019-10-25-三栏，两边固定，中间自适应.md
@@ -18,15 +18,15 @@ typora-root-url: ..
 
 线索记忆：（和隔壁 [两栏，左边固定，右边自适应的布局](./2019-10-26-两栏，左边固定，右边自适应.md) 一起记忆）
 
-​	margin-left「float方法（不成，强关联html结构）、绝对定位（三个绝对定位）」
+​	**margin-left**：「float方法（不成，强关联html结构）、绝对定位（左右绝对定位）」
 
-​	flex布局「flex:1」
+​	**flex布局**：「flex:1」
 
-​	BFC特性「左浮动，右BFC」（不成，强关联html结构）
+​	『<u>**BFC特性**：「左浮动，右BFC」（不成，强关联html结构）</u>』
 
-​	table/grid布局
+​	**table/grid布局**
 
-​	calc() 方法
+​	**calc() 方法**：三浮动
 
 
 
