--- a/_posts/css相关内容/2019-10-26-两栏，左边固定，右边自适应.md
+++ b/_posts/css相关内容/2019-10-26-两栏，左边固定，右边自适应.md
@@ -19,15 +19,15 @@ typora-root-url: ..
 
 线索记忆：
 
-​	margin-left「float方法（左浮动，右margin-left）、绝对定位（左绝对，右margin-left）」
+​	**margin-left（2种）**：「float方法（左浮动，右margin-left）、绝对定位（左绝对，右margin-left）」
 
-​	flex布局「flex:1」
+​	**flex布局**：「flex:1」
 
-​	BFC特性「左浮动，右BFC」
+​	『<u>**BFC特性**：「左浮动，右BFC」</u>』
 
-​	table/grid布局『table 需要给出 width:100% 否则宽度只和内容有关』
+​	**table/grid布局**：『table 需要给出 width:100% 否则宽度只和内容有关』
 
-​	calc() 方法『左右都浮动』
+​	**calc() 方法**：『<u>左右都浮动</u>』
 
 
 
