--- a/_posts/css相关内容/2021-06-26-BFC特点、触发、解决的问题.md
+++ b/_posts/css相关内容/2021-06-26-BFC特点、触发、解决的问题.md
@@ -1,7 +1,7 @@
 ---
 
 layout:     post
-title:     BFC 块级格式化上下文
+title:     BFC特点、触发、解决的问题
 subtitle:  
 date:       2021-06-26
 author:     
@@ -14,7 +14,7 @@ typora-root-url: ..
 ---
 
 
-# BFC 块级格式化上下文
+# BFC特点、触发、解决的问题
 
 ```css
 /* 摘自：《精通CSS第三版》，3.2.8节
