--- a/_posts/css相关内容/2021-06-26-Position属性 - 占位？相对什么定位？.md
+++ b/_posts/css相关内容/2021-06-26-Position属性 - 占位？相对什么定位？.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN1 >
+    - < LTN2 >
 typora-root-url: ..
 ---
 
@@ -16,7 +16,7 @@ typora-root-url: ..
 
 # Position属性 - 占位？相对什么定位？
 
-直接参考 MDN 介绍：https://developer.mozilla.org/zh-CN/docs/Learn/CSS/CSS_layout/Positioning
+直接参考 ：[MDN 介绍](https://developer.mozilla.org/zh-CN/docs/Learn/CSS/CSS_layout/Positioning)
 
 Position有五个属性值，分别是static 、fixed、 relative 、absolute、『sticky』；
 
