--- a/_posts/css相关内容/2021-06-27-CSS 选择器 - 权重匹配方式.md
+++ b/_posts/css相关内容/2021-06-27-CSS 选择器 - 权重匹配方式.md
@@ -9,7 +9,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN1 >
+    - < LTN2 >
 typora-root-url: ..
 ---
 
@@ -18,7 +18,7 @@ typora-root-url: ..
 
 #### 一、权重
 
-​	id **#id** > class **.left**、伪类 **:hover**、属性 **a[href]、a[class=“qiu”]** > 标签类 **div**、伪元素 **::after** > 通配符 *****
+​	id **#id** > class **.left**、伪类 **:hover**、属性 **a[href]/a[class=“qiu”]** > 标签类 **div**、伪元素 **::after** > 通配符 *
 
 注意：
 
