--- a/_posts/面试题整理/2019-07-10-h5新标签和语义化，块行内元素.md
+++ b/_posts/面试题整理/2019-07-10-h5新标签和语义化，块行内元素.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     html相关 面试问题
+title:     h5新标签和语义化，块/行内元素
 subtitle:  
 date:       2019-07-10
 author:     
@@ -29,7 +29,7 @@ typora-root-url: ..
 
 ③常用新标签：
 
-- `header`，一般作为网页的头部使用，**可以多个**
+- 『`header`』，一般作为网页的头部使用，**可以多个**
 
 - **`footer`**，底部，**不一定是文档最底部**，可以多个
 
@@ -72,13 +72,13 @@ typora-root-url: ..
 - `address`，**标签定义文档或文章的作者/拥有者的联系信息**，字体样式默认倾斜
 - 『<u>`time`</u>』，时间标签，主要用于搜索引擎和其它一些内容引擎特殊的解析和展示
 - 『<u>`hgroup`</u>』，专门用来包含标题**h标签的分组**；
-- 『<u>`detail`</u>』，*细节、详情* ，open属性：默认展开，summary相当于详情的标题
+- <u>`detail`</u>，*细节、详情* ，open属性：默认展开，summary相当于详情的标题
 
 ④ `input`标签的增强
 
-- 新增了许多input **type属性**：『<u>`email`、`tel`、`url`</u>』、`number`、『<u>`search`搜索框，加强语义、`range`自由拖动滑块、`time`</u>』、`date`日期、`datetime`时间、`month`、`week`
+- 新增了许多input **type属性**：<u>`email`、『`tel`、`url`</u>』、`number`、『<u>`search`搜索框，加强语义、`range`自由拖动滑块</u>』、`time`、`date`日期、`datetime`时间、`month`、`week`
 
--	新增了许多input的 **属性**：`placeholder`占位符，默认文字、『<u>`autofocus`页面加载时自动获得焦点、`multiple`多文件上传、`autocomplete`、`required`必填项、`accesskey`规定激活元素的快捷键</u>』
+-	新增了许多input的 **属性**：`placeholder`占位符，默认文字、<u>`autofocus`页面加载时自动获得焦点、『`multiple`多文件上传、`autocomplete`、`required`必填项、`accesskey`规定激活元素的快捷键</u>』
 
 ⑤**多媒体标签**：`embed`定义嵌入的内容、`audio`播放音频、`video`播放视频、`src`导入，`autoplay`自动播放、`controls`是否默认显示播放件、`loop`循环播放
 
@@ -88,7 +88,7 @@ typora-root-url: ..
 
 参考博客：[行内元素+块级元素](https://www.cnblogs.com/yc8930143/p/7237456.html)
 
-- 行内元素：span、**『<u>a</u>』**、u、i、『<u>em、b、select、label、textarea、button、strong、**br**</u>』
+- 行内元素：span、**a**、u、i、b、『<u>em、select、label、textarea、button、strong、**br**</u>』
 
 -	块级元素：div、h1～h6、ol、ul、dl、li、table、th、tr、dd、dt、**p**、『<u>caption、address</u>』、hr
 
