--- a/_posts/css相关内容/2021-06-29-子盒子在父盒子中水平垂直居中有几种方法？.md
+++ b/_posts/css相关内容/2021-06-29-子盒子在父盒子中水平垂直居中有几种方法？.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN1 >
+    - < LTN2 >
 typora-root-url: ..
 ---
 
@@ -45,7 +45,7 @@ typora-root-url: ..
 .father {
     display: flex;
     justify-content: center; 
-	align-items: center;
+    align-items: center;
 }
 ```
 
@@ -97,13 +97,13 @@ typora-root-url: ..
     text-align: center; /* 内容水平居中 */
 }
 .child {
-    display: inline-block; /* 使其内容变为文本格式，但仍旧可以设置宽高 */
+    display: inline-block; /* 『使其内容变为文本格式，但仍旧可以设置宽高』 */
 }
 ```
 
 
 
-### 2️⃣行内元素的一些居中属性
+### 2️⃣ 行内元素的一些居中属性
 
 ```css
 text-align: center；
@@ -113,7 +113,7 @@ line-height: 100px;
 height: 100px;
 ```
 
-### 3⃣️块元素的一些居中属性
+### 3⃣️ 块元素的一些居中属性
 
 ```css
 /* 当前元素必须有宽度 */
