js：随机给一个盒子添加一个十六进制的颜色

--- a/_posts/算法、刷题/2019-06-18-函数参数传值修改.md
+++ b/_posts/算法、刷题/2019-06-18-函数参数传值修改.md
@@ -14,7 +14,7 @@ typora-root-url: ..
 
 ###  函数参数传值修改
 
-拼多多编程题：
+##### 一、拼多多编程题
 
 <img src="/../img/assets_2019/image-20210810143107273.png" alt="image-20210810143107273" style="zoom:30%;" />
 
@@ -31,4 +31,27 @@ objTemp = { b: 2 }; // objTemp指向了另一个地址的对象
 浏览器输出结果：
 
 ![image-20210810145410092](/../img/assets_2019/image-20210810145410092.png)
+
+
+
+##### 二、补充案例
+
+请删除注释再做一遍，注意很多变量名称相似：
+
+```js
+var num1 = 55;
+var num2 = 66;
+function f1(num, num1) {
+    num = 100;
+    num1 = 100;
+    num2 = 100; // 这是一个隐式全局变量 - 改变的是全局中的 num2
+    console.log(num); // 100
+    console.log(num1); // 100
+    console.log(num2); // 100
+}
+f1(num1, num2);
+console.log(num); // 『报错』
+console.log(num1); // 55
+console.log(num2); // 『100』
+```
 
