add: 红宝书第4版 第十二章 BOM

--- a/_posts/《红宝书相关博客》/2019-06-04-第一章-第三章 简介、基本概念 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-04-第一章-第三章 简介、基本概念 小结.md
@@ -68,7 +68,7 @@ typora-root-url: ..
 
 
 
-![《红宝书》-4](/../img/assets_2023/:Users:haoling:Downloads:《红宝书》-4.jpg)
+![image-20241022144215050](/../img/assets_2023/image-20241022144215050.png)
 
 ![《红宝书》-5](/../img/assets_2023/《红宝书》-5.jpg)
 
