js：reduce-对象分类、Promise按序执行、实现map

--- a/_posts/《红宝书相关博客》/2024-10-22-第十二章 BOM 小结 .md
+++ b/_posts/《红宝书相关博客》/2024-10-22-第十二章 BOM 小结 .md
@@ -20,3 +20,27 @@ typora-root-url: ..
 详细请看 [第一章小结](./2019-06-04-第一章-第三章%20简介、基本概念%20小结.md)
 
 ![image-20241023102852316](/../img/assets_2023/image-20241023102852316.png)
+
+##### 使用setTimeout模拟setInterval
+
+```javascript
+function fakeSetInterval(callback, delay) {
+    setTimeout(() => {
+        callback();
+        fakeSetInterval(callback, delay)
+    }, delay)
+}
+fakeSetInterval(() => console.log(1), 1000);
+```
+
+ `setInterval` ：不关心执行时长、不关心什么时候执行，在指定时间后，就将任务推入执行队列
+
+差别：
+
+```javascript
+// fakeSetInterval：在函数执行完成之后，一秒再执行下一个函数
+函数A(执行时间)-->(1s)-->函数B(执行时间)-->(1S)-->函数C(执行时间)-->(1S)
+// setInterval：函数执行的间隔为1秒钟，可以这样认为
+(函数A(执行时间)+(间隔时间))=(1S)-->(函数B(执行时间)+(间隔时间))=(1S)-->(函数C(执行时间)+(间隔时间))=(1S)
+```
+
