js：怎么判断数组类型？4种方法

--- a/_posts/JS原生基础相关/2020-03-30-解构赋值的深入理解.md
+++ b/_posts/JS原生基础相关/2020-03-30-解构赋值的深入理解.md
@@ -30,15 +30,13 @@ typora-root-url: ..
 
 对象和数组逐个对应表达式，提供了一种简单的定义一个特定的数据组的方法。
 
-
-
 ```javascript
-// 1、
-[a, b] = [10, 20];// 常见 a=10,b=20
-// 2、
-[a, b, ...rest] = [10, 20, 30, 40, 50]; // 常见 a=10,b=20,rest=[30,40,50]
-// 3、【知识盲点】
-({ a, b } = { a: 10, b: 20 });// a=10,b=20
+// 1、常见 a=10,b=20
+[a, b] = [10, 20];
+// 2、常见 a=10, b=20, rest=[30,40,50]
+[a, b, ...rest] = [10, 20, 30, 40, 50];
+// 3、【知识盲点】a=10,b=20
+({ a, b } = { a: 10, b: 20 });
 ```
 
 > **着重分析这次的盲点**：
@@ -47,8 +45,7 @@ typora-root-url: ..
 
 ```javascript
 var x = [1, 2, 3, 4, 5];
-var [y, z] = x;
-// y=1,z=2
+var [y, z] = x; // y=1,z=2
 ```
 
 
@@ -73,25 +70,21 @@ var [y, z] = x;
 
 ```javascript
 // 可以使用解构在一行内完成解析
-function f() {
-  return [1, 2];
-}
+function f() {return [1, 2]}
 var a, b; 
-[a, b] = f(); // a=1,b=2
+[a, b] = f(); // a=1, b=2
 ```
 
 4、忽略某些值
 
 ```javascript
-function f() {
-  return [1, 2, 3];
-}
+function f() {return [1, 2, 3]}
 var [a, , b] = f();// a=1,b=3
 ```
 
 5、将剩余数组赋值给一个变量
 
-这里的重点是：如果剩余元素右侧有逗号，会抛出 `SyntaxError`，因为剩余元素必须是数组的最后一个元素。
+这里的重点是：如果剩余元素右侧有逗号，会抛出 `SyntaxError`，因为**剩余元素必须是数组的最后一个元素**。
 
 ```javascript
 var [a, ...b,] = [1, 2, 3];// SyntaxError
@@ -114,27 +107,24 @@ var a, b;
 
 ```javascript
 const metadata = {
-    title: '俊哲',
+    title: 'aQiu',
     translations: [
         {
-            locale: '果酱',
-            title: '栀子花'
+            locale: 'passion',
+            title: 'resistance'
         }
     ],
-    url: '世人皆爱有情人'
+    url: '浪漫至死不渝'
 };
-
 let {
-    title: gjxm,
+    title: a,
     translations: [
         {
-            title: zzh,
+            title: b,
         },
     ],
 } = metadata;
-
-console.log(gjxm); // 俊哲
-console.log(zzh);  // 栀子花
+console.log(a, b); // aQiu resistance
 ```
 
 3、**For of 迭代**和解构
@@ -142,23 +132,22 @@ console.log(zzh);  // 栀子花
 ```javascript
 var people = [
     {
-        name: '浪浪钉',
+        name: '比奇堡',
         family: {
-            mother: '栀子花',
-            father: '高级项目',
+            mother: '海绵宝宝',
+            father: '派大星',
         },
         age: 35
     },
     {
-        name: '四季山庄',
+        name: '菠萝屋',
         family: {
-            mother: '周子舒',
-            father: '温客行',
+            mother: '海绵宝宝',
+            father: '小蜗',
         },
         age: 25
     }
 ];
-
 for (var {
     name: n,
     family: {
@@ -167,18 +156,16 @@ for (var {
 } of people) {
     console.log('name: ' + n + ', father: ' + f);
 }
+// name: 比奇堡, father: 派大星
+// name: 菠萝屋, father: 小蜗
 ```
 
 4、解构对象时会查找原型链（**如果属性不在对象自身，将从原型链中查找**）
 
 ```javascript
-// 声明对象 和 自身 self 属性
-var obj = {self: '123'};
-// 在原型链中定义一个属性 prot
-obj.__proto__.prot = '456';
-
+var obj = {self: '123'}; // 声明对象 和 自身 self 属性
+obj.__proto__.prot = '456'; // 在原型链上定义
 const {self, prot} = obj;
-// self "123"
-// prot "456"（访问到了原型链）
+// self "123" , prot "456"（访问到了原型链）
 ```
 
