LTN：10.25 LTN1 测试，调整盒子归属

--- a/_posts/《红宝书相关博客》/2019-06-04-第一章-第三章 简介、基本概念 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-04-第一章-第三章 简介、基本概念 小结.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - 《JavaScript高级程序设计4》
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -21,25 +22,15 @@ typora-root-url: ..
 2. **文档对象模型**（`DOM`），提供访问和操作网页内容的方法和接口；
 3. **浏览器对象模型**（`BOM`），提供与浏览器交互的方法和接口；
 
-​    `JavaScript`的这三个组成部分，在当前五个主要浏览器（IE、Firefox、Chrome、Safari和Opera）中都得到了不同程度的支持。
-
-​    其中，所有浏览器都对`ECMAScript`第3版的支持大体上都还不错，而对`ECMAScript5`的支持程度越来越高，但对`DOM`的支持则彼此像差比较多。对已经正式纳入`HTML5`标准的`BOM`来说，尽管各浏览器都实现了某些众所周知的共同特性，但其他特性还是会因为浏览器而异。
-
 ![《红宝书》-2](/../img/assets_2023/《红宝书》-2.jpg)
 
 # 第二章 在HTML中使用JavaScript 小结
 
 ​    把`JavaScript`插入到`HTML`页面中要使用`<script>`元素。使用这个元素可以把`JavaScript`嵌入到`HTML`页面中，让脚本与标记混合在一起；也可以包含外部的`JavaScript`文件。
 
-而我们需要注意的地方有：
-
-1. 在包含外部`JavaScript`文件时，必须将`src`属性设置为指向相应文件的`URL`。而这个文件既可以是与包含它的页面位于同一个服务器上的文件，也可以是其他任何域中的文件。
-2. 所有`<script>`元素都会按照它们在页面中出现的**先后顺序依次被解析**。在不使用`defer`和`async`属性的情况下，只有在解析完前面`<script>`元素中的代码后，才会开始解析后面`<script>`中的`<script>`代码。
-3. 由于浏览器会先解析完不使用`defer`属性的`<script>`元素中的代码，然后再解析后面的内容，所以一般应该**把`<script>`元素放在页面最后**，即主要内容后面，`</body>`标签前面。
-4. 使用`defer`属性可以让脚本在文档**完全呈现之后**再执行。延迟脚本总是**按照指定它们的顺序执行**。
-5. 使用`async`属性可以表示当前脚本不必等待其他脚本，也不必阻塞文档呈现，**下载完成就执行**。**不能保证异步脚本按照它们在页面中出现的顺序执行**。
-
-​    另外，使用`<noscript>`元素可以指定在不支持脚本的浏览器中显示替代的内容。但在启用了脚本的情况下，浏览器不会显示`<noscript>`元素中的任何内容。
+1. 所有`<script>`元素都会按照它们在页面中出现的**先后顺序依次被解析**【在不使用`defer`和`async`属性的情况下】
+2. 使用`defer`属性可以让脚本在文档**完全呈现之后**再执行。延迟脚本总是**按照指定它们的顺序执行**。【一般应该把`<script>`元素放在页面最后，即主要内容后面、`</body>`标签前面】
+3. 使用`async`属性可以表示当前脚本不必等待其他脚本，也不必阻塞文档呈现，**下载完成就执行**。**不能保证异步脚本按照它们在页面中出现的顺序执行**。
 
 ![《红宝书》-3](/../img/assets_2023/《红宝书》-3.jpg)
 
@@ -47,20 +38,14 @@ typora-root-url: ..
 
 # 第三章 基本概念 小结
 
-​    `JavaScript`的核心语言特性在`ECMA-262`中是以名为`ECMAScript`的伪语言的形式来定义的。`ECMAScript`中包含了所有基本的语法、操作符、数据类型以及完成基本的计算任务所必须的对象，但没有对取得输入和产生输出的机制作出规定。理解`ECMAScript`及其纷繁复杂的各种细节，是理解其在`Web`浏览器中的实现----`JavaScript`的关键。
-
-​    以下简要总结了`ECMAScript`中基本的要素。
+​    `JavaScript`的核心语言特性在`ECMA-262`中是以名为`ECMAScript`的伪语言的形式来定义的。`ECMAScript`中包含了所有基本的语法、操作符、数据类型以及完成基本的计算任务所必须的对象，但没有对取得输入和产生输出的机制作出规定。
 
 1. `ECMAScript`中基本数据类型包括`Undefined`、`Null`、`Boolean`、`Number`、`String`和`Symbol`。
-2. 与其他语言不同，`ECMAScript`不区分整数和浮点数，只有`Number`一种数值数据类型。
-3. `Object`类型是一种复杂的数据类型，是这门语言中所有对象的基础类型。
-4. 严格模式为这门语言中容易出错的地方施加了限制。
-5. `ECMAScript`提供了很多与 C 及其他类 C 语言中相同的基本操作符，包括符号操作符、布尔操作符、关系操作符、相等操作符及赋值操作符等。
-6. `ECMAScript`从其他语言中借鉴了很多流控制语句，例如 if 语句、 for 语句和 switch 语句等。
+2. 与其他语言不同，`ECMAScript`**不区分整数和浮点数**，只有`Number`一种数值数据类型。
 
 
 
-`ECMAScript`中的函数与其他语言中的函数有诸多不同之处。
+`ECMAScript`中的函数与其他语言中的函数有诸多不同之处：
 
 1. 无须指定函数的返回值，因为任何`ECMAScript`函数都可以在任何时候返回任何值。
 2. `ECMAScript`中也没有函数签名的概念，因为其**函数参数**是以**一个包含零或多个值的数组的形式**传递的。
@@ -72,6 +57,12 @@ typora-root-url: ..
 
 ![《红宝书》-5](/../img/assets_2023/《红宝书》-5.jpg)
 
+注意：
+
+- `Number(undefined);` // NaN、 `Number(null);`// 0
+
+    <img src="/../img/assets_2023/image-20241025131214501.png" alt="image-20241025131214501" style="zoom:15%;" />
+
 ![《红宝书》-6](/../img/assets_2023/《红宝书》-6.jpg)
 
 ![image-20241023102033693](/../img/assets_2023/image-20241023102033693.png)
@@ -80,6 +71,6 @@ typora-root-url: ..
 
 ![《红宝书》-9](/../img/assets_2023/《红宝书》-9.jpg)
 
-![《红宝书》-10 2](/../img/assets_2023/《红宝书》-2.png)
+![image-20241025163819673](/../img/assets_2023/image-20241025163819673.png)
 
-![《红宝书》-11](/../img/assets_2023/《红宝书》-11.jpg)
+![image-20241025164108253](/../img/assets_2023/image-20241025164108253.png)
