--- a/_posts/《红宝书相关博客》/2019-06-05-第四章 变量、作用域和内存问题 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-05-第四章 变量、作用域和内存问题 小结.md
@@ -8,15 +8,15 @@ header-img:
 catalog: true
 tags:
     - 《JavaScript高级程序设计4》
+    - < LTN2 >
 typora-root-url: ..
 ---
-​    `JavaScript`变量可以用来保存两种类型的值：基本类型值和引用类型值。基本类型的值源自以下6种基本了数据类型：`Undefined`、`Null`、`Boolean`、`Number`、`String`、`Symbol`
+​    `JavaScript`变量可以用来保存两种类型的值：基本类型值和引用类型值。
 
 ###     基本类型值和引用类型值具有以下特点：
 
 1. 基本类型值在内存中占据**固定大小的空间**， 因此被**保存在栈内存**中；
 2. 从一个变量向另一个变量复制基本类型的值，会创建这个值的一个副本；
-3. 引用类型的值是对象，**保存在堆内存**中；
 4. 包含引用类型值的变量实际上包含的并不是对象本身 ，而是**指向该对象的指针**；
 5. 从一个变量向另一个变量复制引用类型的值，复制的其实是指针，因此两个变量最终都指向同一个对象；
 6. 确定一个值是**哪种基本类型可以使用`typeof`操作符**，而确定一个值是**哪种引用类型可以使用`instanceof`操作符**。
@@ -37,8 +37,7 @@ typora-root-url: ..
 
 1. 离开作用域的值将被自动标记为可以回收，因此将在垃圾收集期间被删除；
 2. **“ 标记清除 ”** 是目前最主流的垃圾收集算法，这种算法的思想是给当前不使用的值加上标记，然后再回收其内存；
-3. 另一种垃圾收集策略是 **“ 引用计数 ”** ，这种算法的思想是跟踪记录所有值被引用的次数。`JavaScript`引擎目前都不再使用这种算法；但在 IE 中访问非原生`JavaScript`对象（如`DOM`元素）时，这种算法仍然可能会导致问题；
-4. 当代码中存在循环引用现象时，" 引用计数 "算法就会导致问题；
+3. 另一种垃圾收集策略是 **“ 引用计数 ”** ，这种算法的思想是跟踪记录所有值被引用的次数【当代码中存在循环引用现象时，就会导致问题】
 5. 解除变量的引用不仅有助于消除循环引用现象，而且对垃圾收集也有好处。为了确保有效的回收内存，应该及时解除不再使用的全局对象、全局对象属性以及循环引用变量的引用。
 
 ![《红宝书》-12 2](/../img/assets_2023/《红宝书》-12 2.jpg)
