LTN：10.25 LTN1 测试，调整盒子归属

--- a/_posts/JS原生基础相关/2020-03-24-改变原数组+结束循环+性能排序.md
+++ b/_posts/JS原生基础相关/2020-03-24-改变原数组+结束循环+性能排序.md
@@ -21,7 +21,7 @@ typora-root-url: ..
 
 总结：
 
-- 会改变原数组的方法(8种)：`push`,`pop`,`shift`,`unshift`,`reverse`,`sort`,`splice`,`fill`
+- 会改变原数组的方法(8种)：`push`,`pop`,`shift`,`unshift`,`reverse`,`sort`,『<u>`splice`</u>』,`fill`
 
 -	除了抛出异常外，**不能通过 break 和 return 结束循环**：`foreach`、`map`、`filter`【for…of和for循环可以】
 
