--- a/_posts/css相关内容/2021-06-26-BFC特点、触发、存在解决的问题.md
+++ b/_posts/css相关内容/2021-06-26-BFC特点、触发、存在解决的问题.md
@@ -1,7 +1,7 @@
 ---
 
 layout:     post
-title:     BFC特点、触发、解决的问题
+title:     BFC特点、触发、存在/解决的问题
 subtitle:  
 date:       2021-06-26
 author:     
@@ -14,7 +14,7 @@ typora-root-url: ..
 ---
 
 
-# BFC特点、触发、解决的问题
+# BFC特点、触发、存在/解决的问题
 
 ```css
 /* 摘自：《精通CSS第三版》，3.2.8节
@@ -37,27 +37,17 @@ typora-root-url: ..
 
 ### 二、怎么创建：
 
-- 『**浮动** (float不为 none）』
-- 『**绝对定位元素** (position: absolute / fixed)』
-- **display**： inline-block 行内块、『table-cell 表格单元格、table-caption 表格标题、flex 弹性盒子』
-- **overflow 除 visible的值**(overflow: hidden/auto/『scroll』)
-- 『根元素』
+- 『<u>**浮动** (float不为 none）</u>』
+- **绝对定位元素** (position: absolute / fixed)
+- **display**： inline-block 行内块、『<u>table-cell 表格单元格</u>』、table-caption 表格标题、flex 弹性盒子
+- **overflow 『除 visible』的值**(overflow: hidden/auto/『<u>scroll</u>』)
+- 根元素
 
 
 
 ### 三、BFC应用
 
-#### 1/3：两栏，左边固定，右边自适应布局
-
-​	当一个元素具备了触发新块级格式化上下文的条件，**并且挨着一个浮动元素**时，它就会忽略自己的边界必须接触自己的包含块边界的规则。此时，**这个元素会收缩到适当大小**，不仅行内元素如此，所有元素都如此。
-
-​	浮动本身一开始就与印刷排版中的 **文本环绕** 相似，如果只有浮动，第二个元素有部分被浮动元素所覆盖，(但是文本信息不会被浮动元素所覆盖) 如果想避免元素被覆盖，可以触发第二个元素的BFC；
-
-​	BFC这种特性也可以用于实现一边宽度固定，一边自适应的布局
-
-<img src="/../img/assets_2019/1575985045757.png" style="zoom:20%;" />
-
-#### 2/3：相邻盒子的margin会发生叠加问题
+#### 1/3：相邻盒子的margin会发生叠加问题
 
 <img src="/../img/assets_2019/image-20210619154739203.png" alt="image-20210619154739203" style="zoom:33%;" />
 
@@ -95,7 +85,7 @@ typora-root-url: ..
 </section>
 ```
 
-#### 应用3/3：可以包含浮动的元素（清除浮动）
+#### 2/3：可以包含浮动的元素（清除浮动）
 
 ```css
 .outer {
@@ -103,3 +93,14 @@ typora-root-url: ..
 }
 ```
 
+#### 3/3：两栏，左边固定，右边自适应布局
+
+​	当一个元素具备了触发新块级格式化上下文的条件，**并且挨着一个浮动元素**时，它就会忽略自己的边界必须接触自己的包含块边界的规则。此时，**这个元素会收缩到适当大小**，不仅行内元素如此，所有元素都如此。
+
+​	浮动本身一开始就与印刷排版中的 **文本环绕** 相似，如果只有浮动，第二个元素有部分被浮动元素所覆盖，(但是文本信息不会被浮动元素所覆盖) 如果想避免元素被覆盖，可以触发第二个元素的BFC；
+
+​	BFC这种特性也可以用于实现一边宽度固定，一边自适应的布局
+
+<img src="/../img/assets_2019/1575985045757.png" style="zoom:20%;" />
+
+#### 
