--- a/_posts/面试题整理/2019-07-10-h5新标签和语义化，块行内元素.md
+++ b/_posts/面试题整理/2019-07-10-h5新标签和语义化，块行内元素.md
@@ -33,7 +33,7 @@ typora-root-url: ..
 
 - **`footer`**，底部，**不一定是文档最底部**，可以多个
 
-- 『**<u>aside</u>**』，侧边栏
+- **`aside`**，侧边栏
 
 - **`nav`**，**导航**栏
 
@@ -76,9 +76,9 @@ typora-root-url: ..
 
 ④ `input`标签的增强
 
-- 新增了许多input **type属性**：<u>`email`、『`tel`、`url`</u>』、`number`、『<u>`search`搜索框，加强语义、`range`自由拖动滑块</u>』、`time`、`date`日期、`datetime`时间、`month`、`week`
+- 新增了许多input **type属性**：<u>`email`、`tel`、『`url`</u>』、`number`、『<u>`search`搜索框，加强语义、`range`自由拖动滑块</u>』、`time`、`date`日期、`datetime`时间、`month`、`week`
 
--	新增了许多input的 **属性**：`placeholder`占位符，默认文字、<u>`autofocus`页面加载时自动获得焦点、『`multiple`多文件上传、`autocomplete`、`required`必填项、`accesskey`规定激活元素的快捷键</u>』
+-	新增了许多input的 **属性**：`placeholder`占位符，默认文字、<u>`autofocus`页面加载时自动获得焦点、`multiple`多文件上传、`autocomplete`、『`required`必填项、`accesskey`规定激活元素的快捷键</u>』
 
 ⑤**多媒体标签**：`embed`定义嵌入的内容、`audio`播放音频、`video`播放视频、`src`导入，`autoplay`自动播放、`controls`是否默认显示播放件、`loop`循环播放
 
@@ -88,9 +88,9 @@ typora-root-url: ..
 
 参考博客：[行内元素+块级元素](https://www.cnblogs.com/yc8930143/p/7237456.html)
 
-- 行内元素：span、**a**、u、i、b、『<u>em、select、label、textarea、button、strong、**br**</u>』
+- 行内元素：span、**a**、u、i、b、strong、『<u>em、select、label、textarea、button、**br**</u>』
 
--	块级元素：div、h1～h6、ol、ul、dl、li、table、th、tr、dd、dt、**p**、『<u>caption、address</u>』、hr
+-	块级元素：div、ol、ul、li、table、th、**p**、『<u>tr、dd、dt、dl、caption、address、h1～h6</u>』、hr
 
 - **行内块元素**：例如 img 、 input、td
 
