--- a/_posts/《红宝书相关博客》/2024-09-24-第七章 迭代器与生成器 小结.md
+++ b/_posts/《红宝书相关博客》/2024-09-24-第七章 迭代器与生成器 小结.md
@@ -8,13 +8,14 @@ header-img:
 catalog: true
 tags:
     - 《JavaScript高级程序设计4》
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 ​	迭代是一种所有编程语言中都可以看到的模式。ECMAScript 6 正式支持迭代模式并引入了两个新的
 语言特性：迭代器和生成器。
 
-​	迭代器是一个可以由任意对象实现的接口，支持连续获取对象产出的每一个值。任何实现 `Iterable`接口的对象都有一个 **`Symbol.iterator` 属性**，这个属性引用【默认迭代器】。默认迭代器就像一个迭代器工厂，也就是一个函数，调用之后会产生一个实现 `Iterator` 接口的对象。
+​	任何实现 `Iterable`接口的对象都有一个 **`Symbol.iterator` 属性**，这个属性引用【默认迭代器】。默认迭代器就像一个迭代器工厂，也就是一个函数，调用之后会产生一个实现 `Iterator` 接口的对象。
 
 ​	迭代器必须通过连续 **调用 `next()` 方法** 才能连续取得值，这个方法返回一个 `IteratorObject`。这个对象包含一个 `done` 属性（布尔值，表示是否还有更多值可以访问）和一个 `value` 属性（包含迭代器返回的当前值）。这个接口可以通过手动反复调用 `next()` 方法来消费，也可以通过原生消费。比如 `for-of` 循环来自动消费。
 
