LTN：10.25 LTN1 -> 升级为 LTN2

--- a/_posts/算法、刷题/2019-06-18-函数参数传值修改.md
+++ b/_posts/算法、刷题/2019-06-18-函数参数传值修改.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < 算法题 >
-    - < LTN1 >
+    - < LTN2 >
 typora-root-url: ..
 ---
 
@@ -30,7 +30,7 @@ objTemp = { b: 2 }; // objTemp指向了另一个地址的对象
 
 浏览器输出结果：
 
-![image-20210810145410092](/../img/assets_2019/image-20210810145410092.png)
+![image-20210810145410092](../img/assets_2019/image-20210810145410092.png)
 
 
 
@@ -44,14 +44,13 @@ var num2 = 66;
 function f1(num, num1) {
     num = 100;
     num1 = 100;
-    num2 = 100; // 这是一个隐式全局变量 - 改变的是全局中的 num2
-    console.log(num); // 100
-    console.log(num1); // 100
-    console.log(num2); // 100
+    num2 = 100; 			// 这是一个隐式全局变量 - 改变的是全局中的 num2
+    console.log(num); 		// 100
+    console.log(num1); 		// 100
+    console.log(num2); 		// 100
 }
 f1(num1, num2);
-console.log(num); // 『报错』
-console.log(num1); // 55
-console.log(num2); // 『100』
+console.log(num); 			// 『报错』
+console.log(num1); 			// 55
+console.log(num2); 			// 『100』
 ```
-
