浏览器原理：请求、渲染复习

--- a/_posts/浏览器原理相关内容/2021-04-06-01 浏览器进程.md
+++ b/_posts/浏览器原理相关内容/2021-04-06-01 浏览器进程.md
@@ -58,7 +58,7 @@ Chrome打开一个页面需要启动多少进程？4个
 
 - 进程创建/复用
 
-    排版引擎Blink和JavaScript引擎V8都是运行在该进程中，默认情况下，**Chrome会为每个Tab标签创建一个渲染进程**。（相同站点，复用进程）
+    排版引擎Blink和JavaScript引擎V8都是运行在该进程中，默认情况下，**Chrome会为每个Tab标签创建一个渲染进程**。（『<u>相同站点，复用进程</u>』）
 
 - 沙箱模式
 
