--- a/_posts/浏览器原理相关内容/2021-04-08-03 HTTP请求流程.md
+++ b/_posts/浏览器原理相关内容/2021-04-08-03 HTTP请求流程.md
@@ -1,6 +1,6 @@
 ---
  layout:     post
-title:     03 HTTP请求流程
+title:     03 HTTP请求流程【丢弃】
 subtitle:  
 date:       2021-04-08
 author:     
@@ -11,8 +11,11 @@ tags:
 typora-root-url: ..
 ---
 
-
 # 03 HTTP请求流程
+
+- 构建请求需要 DNS域名解析后的 ip -> **本文涉及的图文都有误**，具体流程查看 [导航流程](./2021-04-08-04%20导航流程：从输入url到打开页面发生了什么.md) 的【URL 请求流程】部分
+
+
 
 HTTP协议：一种允许浏览器向服务器获取资源的协议，是Web的基础。
 
