--- a/_posts/浏览器原理相关内容/2021-04-11-13-2 JS如何影响DOM树的构建.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-13-2 JS如何影响DOM树的构建.md
@@ -81,7 +81,7 @@ typora-root-url: ..
 
 其整个执行流程还是一样的，执行到 `script` 标签时， <span style="color:red">**暂停 DOM 的解析**</span>，执行JS代码，不过这里执行JS 时，**需要先下载这段JS代码**（**JS文件的下载过程会阻塞 DOM 解析**）
 
-由于js文件的下载受到网络环境、js文件大小等多种因素的影响，所以Chrome也做了很多优化，其中最主要的就是 <span style="color:red">**预解析操作**</span>【预解析操作：当 **渲染引擎收到字节流之后，会开启一个预解析线程**，用来分析 HTML 文件中包含的 JavaScript、CSS 等相关文件，解析到相关文件之后，预解析线程会 **提前下载** 这些文件】
+由于js文件的下载受到网络环境、js文件大小等多种因素的影响，所以Chrome也做了很多优化，其中最主要的就是 <span style="color:red">**预解析操作**</span>【预解析操作：当 **渲染进程收到字节流之后，会开启一个预解析线程**，用来分析 HTML 文件中包含的 JavaScript、CSS 等相关文件，解析到相关文件之后，预解析线程会 **提前下载** 这些文件】
 
 #### 3/3、在js文件中出现CSS相关操作
 ```html
