浏览器原理：跨页面通信

--- a/_posts/浏览器原理相关内容/2021-04-18-23 如何加快页面显示和相应.md
+++ b/_posts/浏览器原理相关内容/2021-04-18-23 如何加快页面显示和相应.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     23 如何优化页面
+title:     23 如何加快页面显示和相应
 subtitle:  
 date:       2021-04-18
 author:     
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-# 23 如何优化页面
+# 23 如何加快页面显示和相应
 
 页面优化 -- 就是让页面更快得显示和响应
 
