--- a/_posts/浏览器原理相关内容/2021-07-01-前端路由的两种模式.md
+++ b/_posts/浏览器原理相关内容/2021-07-01-前端路由的两种模式.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < 浏览器原理 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -17,36 +18,26 @@ typora-root-url: ..
 
 参考文章：[hash模式和 history模式](https://blog.csdn.net/Charissa2017/article/details/104779412)
 
-核心要点记录：
+##### 一、`hash` 模式 - 通过URL中的哈希值实现页面的路由切换，不需要服务端参与
 
-- 前端路由的核心，就在于 —— <span style="color:red">改变视图的同时不会向后端发出请求</span>
-- 单页面应用（只有一个 `html` 文件）利用 `js` 动态变换网页内容，避免了页面重载；路由提供了浏览器地址变化，网页内容也跟随变化
-- `vue-router` 默认 `hash` 模式
+```js
+// http://example.com/#/page1 -> #/page1 就是 hash值 - #后面的字符
+```
 
+-	核心方法：location.hash
+-	特点：<span style="color:red">**改变视图，但不会向后端发出请求**</span>，服务器不会接收到哈希值的变化
+-	后退：虽然修改路由不会重载页面，但是会创造一条访问历史记录，可后退
+-	监听变化：onhashchange
+-	适用场景：非常适合构建单页面应用 - 在不刷新整个页面的情况下，实现 js 动态改变页面内容的变化和更新
 
+##### 二、`history` 模式 - 通过 H5 history API 实现路由切换，需要服务端响应
 
-- `hash` 模式 - #：
+```js
+history.pushState(null, null, '/page1');
+// URL 被改为 http://example.com/page1
+```
 
-    `hash` 就是 `#` 后面的字符 - <span style="color:red">不会被包括在 `http` 请求中</span>；
-
-    `window.location.hash` 读写 - 写入时，<span style="color:red">不会重载网页</span>，但会创造一条访问历史记录，可<span style="color:red">后退</span>；
-
-    `onhashchange` 监听 `hash` 的变更
-
-    
-
-- `history` 模式 - 历史记录栈：
-
-    `window.history.popState(state, title, url)` 、 `window.history.pushState()` ，再基于已有的 `back` 、 `forward` 、`go` 方法，对历史记录栈进行修改 - 改变当前 URL；
-
-    
-
-优缺点对比
-
-|              | hash                               | history.pushState()                 |
-| ------------ | ---------------------------------- | ----------------------------------- |
-| URL更换      | 不能更换URL，只能改变 `#` 后面部分 | 可以更换为新的同源任意URL           |
-| 相同值变化   | 只有新值才会触发将记录添加到栈     | 新旧同一个URL也会添加到记录栈中     |
-| 记录中的类型 | 只有 `string` 类型                 | 通过 `stateObject` 参数添加任意类型 |
-|              |                                    | 可额外设置 `title` 类型             |
-
+- 核心方法： history.pushState()、 history.replaceState() 
+- 特点：**服务器会完整接收到 URL 请求**，需要服务端响应
+- 后退：基于已有的 `back` 、 `forward` 、`go` 方法，对历史记录栈进行修改
+- 监听变化：`history.popState()` 
