红宝书：第十五章 DOM扩展

--- a/_posts/《红宝书相关博客》/2024-10-30-第十四章-第十五章 DOM、DOM扩展 小结.md
+++ b/_posts/《红宝书相关博客》/2024-10-30-第十四章-第十五章 DOM、DOM扩展 小结.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      第十四章 DOM 小结
+title:      第十四章-第十五章 DOM、DOM扩展
 subtitle:  
 date:       2024-10-30
 author:     
@@ -12,6 +12,8 @@ typora-root-url: ..
 ---
 
 
+
+##### 第十四章 DOM
 
 ​	文档对象模型（DOM，Document Object Model）是语言中立的 HTML 和 XML 文档的 API。
 
@@ -30,5 +32,15 @@ DOM 由一系列节点类型构成，主要包括以下几种：
 ​	要理解 DOM，最关键的一点是知道影响其性能的问题所在。**DOM 操作** 在 JavaScript 代码中是代价比较高的，NodeList 对象尤其需要注意。**NodeList 对象是“实时更新”的**，这意味着**每次访问它都会执行一次新的查询**。考虑到这些问题，实践中要尽量减少 DOM 操作的数量。
 
 ​	`MutationObserver` 是为代替性能不好的 `MutationEvent` 而问世的。使用它可以有效精准地监控DOM 变化，而且 API 也相对简单。
+
+##### 第十五章 DOM 扩展
+
+​	虽然 DOM 规定了与 XML 和 HTML 文档交互的核心 API，但其他几个规范也定义了对 DOM 的扩展。
+
+​	本章主要介绍了以下 3 个规范：
+
+- `Selectors API` 为基于 CSS 选择符获取 DOM 元素定义了几个方法：`querySelector()`、`querySelectorAll()`和 `matches()`。
+- Element Traversal 在 DOM 元素上定义了额外的属性，以方便对 DOM 元素进行 **遍历**。这个需求是因浏览器处理元素间空格的差异而产生的。
+- HTML5 为标准 DOM 提供了大量扩展。其中包括对 `innerHTML` 属性等事实标准进行了标准化，还有焦点管理、字符集、滚动等特性。
 
 ![《红宝书》-30](/../img/assets_2023/《红宝书》-30.jpg)
