浏览器原理：怎么实现跨域

--- a/_posts/浏览器原理相关内容/2021-07-11-大量图片加载优化.md
+++ b/_posts/浏览器原理相关内容/2021-07-11-大量图片加载优化.md
@@ -15,11 +15,7 @@ typora-root-url: ..
 
 # 大量图片加载优化
 
-参考文章：[网页图片加载优化方案](https://zhuanlan.zhihu.com/p/33370207)
-
-核心要点记录：
-
-#### **问题**
+#### **大量图片带来的问题**
 
 1、并发数量限制带来的 **排队时间**：浏览器对于同一个域名，最多支持  **6 个请求的并发（HTTP/1.1限制）**，其他的请求将会推入到队列中等待或者停滞不前，直到六个请求之一完成后，队列中新的请求才会发出
 
