--- a/_posts/浏览器原理相关内容/2024-10-11-浏览器隐藏滚动条.md
+++ b/_posts/浏览器原理相关内容/2024-10-11-浏览器隐藏滚动条.md
@@ -23,23 +23,18 @@ typora-root-url: ..
 
 ```css
 --Chrome--
-body::-webkit-scrollbar{
-	display:none;
-}
+body::-webkit-scrollbar{ display:none;}
 --IE/Edge--
-body{
-    -ms-overflow-style: none;
-}
+body{ -ms-overflow-style: none;}
 --Firefox--
 html {
     overflow: -moz-hidden-unscrollable; /*注意！若只打 hidden，chrome 的其它 hidden 会出问题*/
     height: 100%;
 }
-
 body {
-	height: 100%;
-	width: calc(100vw + 18px); /*浏览器滚动条的长度大约是 18px*/
-	overflow: auto;
+    height: 100%;
+    width: calc(100vw + 18px); /*浏览器滚动条的长度大约是 18px*/
+    overflow: auto;
 }
 ```
 
