LTN：11.2 LTN2 -> 降级为 LTN1

--- a/_posts/css相关内容/2021-06-27-CSS 选择器 - 权重匹配方式.md
+++ b/_posts/css相关内容/2021-06-27-CSS 选择器 - 权重匹配方式.md
@@ -9,12 +9,14 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 
 # CSS 选择器 - 权重/匹配方式
+
+![image-20241103153931418](/../img/assets_2023/image-20241103153931418.png)
 
 #### 一、权重
 
