--- a/_posts/css相关内容/2021-06-29-子盒子在父盒子中水平垂直居中有几种方法？.md
+++ b/_posts/css相关内容/2021-06-29-子盒子在父盒子中水平垂直居中有几种方法？.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -35,6 +35,12 @@ typora-root-url: ..
     </div>
 </body>
 ```
+
+记忆法（4个）：①flex ②绝对定位50% ③table-cell ④绝对定位4个0
+
+『注意：③中父级给了`table-cell` - 使父级以单元格形式呈现，子级的 `inline-block` 是为了使其内容变为文本格式，但仍旧可以设置宽高』
+
+<img src="/../img/assets_2023/image-20241103153038719.png" alt="image-20241103153038719" style="zoom:37%;" />
 
 ### 1️⃣不需要知道子盒宽高
 
@@ -113,7 +119,7 @@ line-height: 100px;
 height: 100px;
 ```
 
-### 3⃣️ 块元素的一些居中属性
+### ③ 块元素的一些居中属性
 
 ```css
 /* 当前元素必须有宽度 */
