LTN：11.2 答题不完整，保持 LTN1 不变

--- a/_posts/JS原生基础相关/2019-07-11-深拷贝和浅拷贝的区别？怎么实现深拷贝？.md
+++ b/_posts/JS原生基础相关/2019-07-11-深拷贝和浅拷贝的区别？怎么实现深拷贝？.md
@@ -18,7 +18,7 @@ typora-root-url: ..
 
 **浅拷贝**：只复制一层对象的属性【扩展运算符`{...obj}`、`Object.assign({}, obj)`】
 
->​	数组的浅拷贝：`Array.from(arr)`、`[…arr]`、`arr.concat()`、`arr.slice()`
+>​	数组的浅拷贝：`Array.from(arr)`、`[…arr]`、『<u>`arr.concat()`、`arr.slice()`</u>』
 
 **深拷贝** ：会递归地复制对象的所有层级的属性【递归函数、`Json.parse(Json.stringify(obj))`】
 
@@ -26,9 +26,9 @@ typora-root-url: ..
 
 #### 区别
 
-- 对象的属性是基本类型时：深拷贝和浅拷贝都是拷贝一个副本，拷贝后修改新对象不会影响原始对象；
+- 『<u>对象的属性是基本类型时</u>』：深拷贝和浅拷贝都是拷贝新副本，拷贝后修改新对象**不会影响原始对象**；
 
-- 对象的属性是引用类型时：浅拷贝只拷贝内存地址，不拷贝引用地址指向的数据 - **修改新对象会影响原始对象**；深拷贝则会拷贝数据，修改新对象不会影响原始对象；
+- 对象的属性是『<u>**引用类型**</u>』时：浅拷贝只拷贝内存地址，不拷贝引用地址指向的数据 - **修改新对象会影响原始对象**；深拷贝则会拷贝数据，修改新对象不会影响原始对象；
 
 
 
@@ -73,13 +73,15 @@ function deepCopy(target) {
     if (Array.isArray(target)) {
         copy = [];
         for (let i = 0; i < target.length; i++) {
+            // 『通过 target[i] 遍历』
             copy[i] = deepCopy(target[i]);
         }
     } else {
         copy = {};
-        for (let key in target) {
-            if (target.hasOwnProperty(key)) {
-                copy[key] = deepCopy(target[key]);
+        for (let i in target) {
+            if (target.hasOwnProperty(i)) {
+                // 『通过 target[i] 遍历』
+                copy[i] = deepCopy(target[i]);
             }
         }
     }
@@ -99,6 +101,7 @@ if (Array.isArray(target)) {
     return Object.keys(target).reduce((pre, cur) => { 
         return Object.assign(pre, { [cur]: deepCopy(target[cur]) }) 
     }, {})
+}
 ````
 
 
