--- a/_posts/浏览器原理相关内容/2021-04-13-18-2 实现给定时间切换状态（拼多多面试题）.md
+++ b/_posts/浏览器原理相关内容/2021-04-13-18-2 实现给定时间切换状态（拼多多面试题）.md
@@ -30,7 +30,7 @@ typora-root-url: ..
 
 2、Promise.race（核心） ：只要有一个参数的 promise 的状态改变，整个返回的 Promise 状态就会跟着改变
 
-3、Promise.race 的结果获取需要使用 then：`Promise.race([]).then(res = > ...)`
+3、『<u>Promise.race 的结果获取需要使用 then：`Promise.race([]).then(res = > ...)`</u>』
 
 // 之前往上找的解法
 
