--- a/_posts/浏览器原理相关内容/2021-06-29-跨页面通信.md
+++ b/_posts/浏览器原理相关内容/2021-06-29-跨页面通信.md
@@ -18,15 +18,19 @@ typora-root-url: ..
 
 两个页面之间的通信会涉及到<span style="color: red">同源策略</span>的限制，所以按照是否满足同源策略的限制分成两大部分来看。
 
-同源页面通信：
+『同源页面通信』：
 
 - 1、广播式通信 - 监听同一频道 `BroadcastChannel`
+    - 『核心方法：频道.postMessage(‘a’) + 频道.onmessage = (e)=>{}』
 - 2、`localStorage` - 只响应非当前页面的修改
+    - 『核心方法：localStorage.setItem(key,value) + window.onstorage = (e)=>{}』
 
-非同源页面通信：
+『非同源页面通信』：
 
 - 1、window.open + postMessage（h5 API）
-- 2、通过 iframe 转换成同源页面通信
+    - 『核心方法：win=window.open(url) + win.postMessage(‘a’) + window.onmessage = (e)=>{}』
+- 『2、通过 iframe 转换成同源页面通信』
+    - origin设置同源
 
 ## 一、同源页面间的通信
 
