--- a/_posts/算法、刷题/2019-06-21-随机给一个盒子添加一个十六进制的颜色.md
+++ b/_posts/算法、刷题/2019-06-21-随机给一个盒子添加一个十六进制的颜色.md
@@ -16,6 +16,10 @@ typora-root-url: ..
 
 ## 随机给一个盒子添加一个十六进制的颜色
 
+注意：1、随机生成数组下标时，需要『使用 parseInt 转换为整数』(将字符串转换成整数：‘15.98’->15)
+
+2、Math.random() 生成的值是 0-1(不含1)，所以乘以 16 能得到 1-16且不包含16的值
+
 ```html
 <style>
 	div {
