--- a/_posts/面试题整理/2019-07-10-h5新标签和语义化，块行内元素.md
+++ b/_posts/面试题整理/2019-07-10-h5新标签和语义化，块行内元素.md
@@ -18,7 +18,7 @@ typora-root-url: ..
 
 #### 1. h5新标签有哪些？为什么要加强语义化？<!doctype html>作用？
 
-加强语义化原因：1.『**<u>默认样式不一样</u>**』  2.有SEO优化作用
+加强语义化原因：1.默认样式不一样  2.有SEO优化作用
 
 ①文档类型设定：`<!doctype html>`
 
@@ -29,7 +29,7 @@ typora-root-url: ..
 
 ③常用新标签：
 
-- 『`header`』，一般作为网页的头部使用，**可以多个**
+- `header`，一般作为网页的头部使用，**可以多个**
 
 - **`footer`**，底部，**不一定是文档最底部**，可以多个
 
@@ -37,9 +37,9 @@ typora-root-url: ..
 
 - **`nav`**，**导航**栏
 
-- **`article`**，独立内容区域，与session类似，用于文章blog、帖子、短文或者回复、评论等
+- 『**`article`**』，独立内容区域，与session类似，用于文章blog、帖子、短文或者回复、评论等
 
-- 『**<u>section</u>**』，代表某一个区域/分区/页面/文档的**一部分区域**，有独立的内容，但结构相近，就可以用section，范围比div大，语义比div更强，可以包含header、`h1-h6`……凸显语义的标签
+- **section**，代表某一个区域/分区/页面/文档的**一部分区域**，有独立的内容，但结构相近，就可以用section，范围比div大，语义比div更强，可以包含header、`h1-h6`……凸显语义的标签
 
 - **`datalist `**，**标签定义选项列表**，请与 input 元素配合使用该元素
 
@@ -76,9 +76,9 @@ typora-root-url: ..
 
 ④ `input`标签的增强
 
-- 新增了许多input **type属性**：<u>`email`、`tel`、『`url`</u>』、`number`、『<u>`search`搜索框，加强语义、`range`自由拖动滑块</u>』、`time`、`date`日期、`datetime`时间、`month`、`week`
+- 新增了许多input **type属性**：`email`、`tel`、『`url`』、`number`、『<u>`search`搜索框，加强语义、`range`自由拖动滑块</u>』、`time`、`date`日期、`datetime`时间、`month`、`week`
 
--	新增了许多input的 **属性**：`placeholder`占位符，默认文字、<u>`autofocus`页面加载时自动获得焦点、`multiple`多文件上传、`autocomplete`、『`required`必填项、`accesskey`规定激活元素的快捷键</u>』
+-	新增了许多input的 **属性**：`placeholder`占位符，默认文字、`autofocus`页面加载时自动获得焦点、`multiple`多文件上传、`required`必填项、『<u>`accesskey`规定激活元素的快捷键、`autocomplete`</u>』
 
 ⑤**多媒体标签**：`embed`定义嵌入的内容、`audio`播放音频、`video`播放视频、`src`导入，`autoplay`自动播放、`controls`是否默认显示播放件、`loop`循环播放
 
@@ -88,9 +88,9 @@ typora-root-url: ..
 
 参考博客：[行内元素+块级元素](https://www.cnblogs.com/yc8930143/p/7237456.html)
 
-- 行内元素：span、**a**、u、i、b、strong、『<u>em、select、label、textarea、button、**br**</u>』
+- 行内元素：span、**a**、u、i、b、strong、em、『<u>select、label、textarea、button、**br**</u>』
 
--	块级元素：div、ol、ul、li、table、th、**p**、『<u>tr、dd、dt、dl、caption、address、h1～h6</u>』、hr
+-	块级元素：div、ol、ul、li、table、th、**p**、tr、『<u>dd、dt、dl、caption、address</u>』、h1～h6、hr
 
 - **行内块元素**：例如 img 、 input、td
 
