--- a/_posts/JS原生基础相关/2020-03-24-改变原数组+结束循环+性能排序.md
+++ b/_posts/JS原生基础相关/2020-03-24-改变原数组+结束循环+性能排序.md
@@ -21,15 +21,15 @@ typora-root-url: ..
 
 总结：
 
-- 会改变原数组的方法(8种)：`push`,`pop`,`shift`,`unshift`,`reverse`,`sort`,『<u>`splice`</u>』,`fill`
+- 会改变原数组的方法(8种)：`push`,`pop`,`shift`,`unshift`,`reverse`,`sort`,`splice`,`fill`
 
--	除了抛出异常外，**不能通过 break 和 return 结束循环**：`foreach`、`map`、`filter`【for…of和for循环可以】
+-	除了抛出异常外，**不能通过 break 和 『<u>return</u>』 结束循环**：`foreach`、`map`、`filter`【for…of和for循环可以】
 
 -	满足场景的方法：`some`、`find`、`for…of`、`for循环`可以找到第一个返回true/值/使用return之后停止
 
 
 
-性能大致比较如下：for循环 > for...of > forEach > map > for...in
+性能大致比较如下：for循环 > for...of > forEach > 『<u>map</u>』 > for...in
 
 ##### 1. 优化版for循环[性能最高]
 
