LTN：11.2 LTN2 -> 升级为 LTN3

--- a/_posts/css相关内容/2019-07-09-盒模型有哪些？有什么区别？.md
+++ b/_posts/css相关内容/2019-07-09-盒模型有哪些？有什么区别？.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN2 >
+    - < LTN3 >
 typora-root-url: ..
 ---
 
@@ -24,11 +24,11 @@ box-sizing: border-box; /* IE盒模型 */
 
 盒模型分为IE盒模型和W3C标准盒模型：
 
-- **W3C 标准盒模型**：`content-box`，设置属性width/height只 **包含内容content**，不包含『<u>border</u>』和padding
+- **W3C 标准盒模型**：`content-box`，设置属性width/height只 **包含内容content**，不包含border和padding
 
 <img src="/../img/assets_2019/image-20210619145623877.png" alt="image-20210619145623877" style="zoom:35%;" />
 
-- **IE 盒模型**：`border-box`，属性width/height = content + padding + 『<u>border</u>』
+- **IE 盒模型**：`border-box`，属性width/height = content + padding + border
 
 <img src="/../img/assets_2019/image-20210619145708455.png" alt="image-20210619145708455" style="zoom:33%;" />
 
